--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Indecision App</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Expensify</title>
+        <link rel="icon" type="image/png" href="images/favicon.png">
     </head>
     <body>
-        <div id="app"></div>
-        <script src="https://unpkg.com/react@18.2.0/umd/react.development.js"></script>
-        <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.development.js"></script>
-        <script src="/scripts/app.js"></script>
+        <div id="app"></div>        
+        <script src="/bundle.js"></script>
     </body>
 </html>
